= Add custom reporter